service/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
spec:
  selector:
    matchLabels:
      app: service
  replicas: 2
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: service:placeholder_name
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: service
  ports:
    - name: http
      port: 3333
  type: ClusterIP
