service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - localhost
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: service
              servicePort: 3333
